<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Settings">


    <TextView
            android:text="@string/Settings_TextSelect"
            android:layout_width="wrap_content"
            style="@style/TextViewStyle"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="16dp">
        <RadioButton
                android:text="@string/Settings_Celsius"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButton_Celsius" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/Settings_Kelvin"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButton_Calvin" android:layout_weight="1"/>
    </RadioGroup>
    <Button
            android:text="@string/ButtonSettingsApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button_SettingsApply" android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"/>
    <Button
            android:text="@string/ButtonSettingsCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button_SettingsCancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"/>
</android.support.constraint.ConstraintLayout>